deploy: 78ea9963b06fdfff97098093be6445a5b371cc00

--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
 <div class='date'><span class='cmr-12'>January 2020, updated June 2021</span></div>
    </div>
    <h3 class='sectionHead' id='introduction'><span class='titlemark'>1   </span> <a id='x1-10001'></a>Introduction</h3>
-<!-- l. 21 --><p class='noindent'>Overleaf<span class='footnote-mark'><a href='main2.html#fn1x0'><sup class='textsuperscript'>1</sup></a></span><a id='x1-1001f1'></a> 
+<!-- l. 20 --><p class='noindent'>c Overleaf<span class='footnote-mark'><a href='main2.html#fn1x0'><sup class='textsuperscript'>1</sup></a></span><a id='x1-1001f1'></a> 
 is popular online LaTeX editor. It can generate PDF files without need to install a
 local TeX distribution. Unfortunatelly, it doesn’t support conversion to HTML out
 of the box. To get the HTML version of the document, we must use some
